# gst-pipeline-launch

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yaml
cmake/: EnableVcpkg.cmake  SetVersion.cmake  vcpkg.cmake
docs/: arch.drawio
resources/: agg_test_pipeline.yaml  atr_video_file.yaml  mux_test.yaml  pipeline.json  pipeline.txt  pipeline.yaml  pipeline_cam1 copy.yaml  pipeline_cam1.yaml  pipeline_cam1_testpattern.yaml  pipeline_cam2.yaml  pipeline_cam2_testpattern.yaml  pipeline_cam3.yaml  pipeline_cam3_testpattern.yaml  pipeline_cam4.yaml  pipeline_cam4_testpattern.yaml  pipeline_orin.yaml  pipeline_test.json  pipeline_test.yaml
resources/detector/: infer_config.yml  resnet18_trafficcamnet.engine
resources/message/: msgconv_config.yml
resources/pipelines/: pipeline_cam1.yaml  pipeline_cam3.yaml  pipeline_cam3_testpattern.yaml
resources/pipelines/test_pipeline/: agg_test_pipeline.yaml  atr_tee.yaml  atr_video_file.yaml
source/: main.cpp
source/App/: App.cpp  App.h  SignalHandler.cpp  SignalHandler.h
source/AppInputs/: MessageServer.cpp  MessageServer.h
source/File/: File.cpp  File.h
source/Gstreamer/: Gstreamer.cpp  Gstreamer.h  PipelineCommands.cpp  PipelineCommands.h  PipelineElement.cpp  PipelineElement.h  PipelineHandler.cpp  PipelineHandler.h
source/Logger/: Logger.h  SpdLogAdapter.h  StdoutAdapter.h
source/Network/: TcpNetworkManager.cpp  TcpNetworkManager.h
source/PeripheryManager/: Ethernet.cpp
source/Pipeline/: PipelineCommands.cpp  PipelineCommands.h  PipelineElement.cpp  PipelineElement.h  PipelineHandler.h  PipelineManager.cpp  PipelineManager.h  PipelineParser.cpp  PipelineParser.h
source/TasksManager/: CommandDispatcher.cpp  CommandInterface.h  Scheduler.cpp  Scheduler.h
